# ChangeLog for dev-ruby/daemons
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/daemons/ChangeLog,v 1.53 2011/04/09 08:32:34 graaff Exp $

*daemons-1.1.2 (09 Apr 2011)

  09 Apr 2011; Hans de Graaff <graaff@gentoo.org> +daemons-1.1.2.ebuild:
  Version bump.

  17 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> daemons-1.1.0.ebuild:
  ppc/ppc64 stable wrt #349877

  14 Jan 2011; Markos Chandras <hwoarang@gentoo.org> daemons-1.1.0.ebuild:
  Stable on amd64 wrt bug #349877

  11 Jan 2011; Markus Meier <maekke@gentoo.org> daemons-1.1.0.ebuild:
  x86 stable, bug #349877

*daemons-1.1.0-r1 (27 Dec 2010)

  27 Dec 2010; Hans de Graaff <graaff@gentoo.org> daemons-1.1.0.ebuild,
  +daemons-1.1.0-r1.ebuild:
  Drop ruby19 support to create a stable candidate.

  08 Oct 2010; Hans de Graaff <graaff@gentoo.org> -daemons-1.0.10-r1.ebuild:
  Remove old version.

*daemons-1.1.0 (19 Jul 2010)

  19 Jul 2010; Hans de Graaff <graaff@gentoo.org> +daemons-1.1.0.ebuild:
  Version bump.

  24 May 2010; Alex Legler <a3li@gentoo.org> daemons-1.0.10-r1.ebuild:
  Add REE18 support

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -daemons-1.0.5.ebuild:
  Remove old versions.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  daemons-1.0.5.ebuild:
  Various cleanups.

  23 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  daemons-1.0.10-r1.ebuild:
  Disable tests, but enable support for JRuby as it seems to work fine.

  08 Jan 2010; Alex Legler <a3li@gentoo.org> -daemons-0.4.2.ebuild:
  remove old version

  04 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  daemons-1.0.10-r1.ebuild:
  Transfer Prefix keywords

*daemons-1.0.10-r1 (27 Dec 2009)

  27 Dec 2009; Alex Legler <a3li@gentoo.org> +daemons-1.0.10-r1.ebuild:
  Revbump, migrating to ruby-fakegem. Tested with ruby18 and ruby19.

  09 Dec 2009; Brent Baude <ranger@gentoo.org> daemons-1.0.10.ebuild:
  Marking daemons-1.0.10 ppc64 for bug 240375
