@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/daemons
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/daemons/ChangeLog,v 1.53 2011/04/09 08:32:34 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/daemons/ChangeLog,v 1.54 2011/04/22 17:27:37 graaff Exp $
+
+*daemons-1.1.3 (22 Apr 2011)
+
+  22 Apr 2011; Hans de Graaff <graaff@gentoo.org> +daemons-1.1.3.ebuild:
+  Version bump.
 
 *daemons-1.1.2 (09 Apr 2011)
 
